internal/dataplane/parser/testdata/golden/ingress-v1-multiple-ports-for-one-service/combined-routes-off_golden.yaml
_format_version: "3.0"
services:
- connect_timeout: 60000
  host: foo-svc.foo-namespace.8000.svc
  id: 1372d85f-0631-5525-b30a-42755b57f643
  name: foo-namespace.foo-svc.pnum-8000
  path: /
  port: 8000
  protocol: http
  read_timeout: 60000
  retries: 5
  routes:
  - hosts:
    - example.net
    https_redirect_status_code: 426
    id: 0ddab388-38bb-5d0b-9555-7c4838807989
    name: foo-namespace.foo.10
    path_handling: v0
    paths:
    - /
    preserve_host: true
    protocols:
    - http
    - https
    regex_priority: 100
    request_buffering: true
    response_buffering: true
    strip_path: false
    tags:
    - k8s-name:foo
    - k8s-namespace:foo-namespace
    - k8s-kind:Ingress
    - k8s-group:networking.k8s.io
    - k8s-version:v1
  tags:
  - k8s-name:foo-svc
  - k8s-namespace:foo-namespace
  - k8s-kind:Service
  - k8s-version:v1
  write_timeout: 60000
- connect_timeout: 60000
  host: foo-svc.foo-namespace.80.svc
  id: cd111d84-e443-5591-a27e-9c33e18f6309
  name: foo-namespace.foo-svc.pnum-80
  path: /
  port: 80
  protocol: http
  read_timeout: 60000
  retries: 5
  routes:
  - hosts:
    - example.com
    https_redirect_status_code: 426
    id: 1d9c6ccc-b13f-5a88-ae11-549f290dcd8b
    name: foo-namespace.foo.00
    path_handling: v0
    paths:
    - /
    preserve_host: true
    protocols:
    - http
    - https
    regex_priority: 100
    request_buffering: true
    response_buffering: true
    strip_path: false
    tags:
    - k8s-name:foo
    - k8s-namespace:foo-namespace
    - k8s-kind:Ingress
    - k8s-group:networking.k8s.io
    - k8s-version:v1
  tags:
  - k8s-name:foo-svc
  - k8s-namespace:foo-namespace
  - k8s-kind:Service
  - k8s-version:v1
  write_timeout: 60000
upstreams:
- algorithm: round-robin
  name: foo-svc.foo-namespace.8000.svc
  tags:
  - k8s-name:foo-svc
  - k8s-namespace:foo-namespace
  - k8s-kind:Service
  - k8s-version:v1
- algorithm: round-robin
  name: foo-svc.foo-namespace.80.svc
  tags:
  - k8s-name:foo-svc
  - k8s-namespace:foo-namespace
  - k8s-kind:Service
  - k8s-version:v1
